# ppaextender

./: .gitignore  README.md  com.github.linuxhubit.ppaextender  com.github.linuxhubit.ppaextender.json  meson.build  pkexec  setup.py
data/: com.github.linuxhubit.ppaextender.appdata.xml  com.github.linuxhubit.ppaextender.desktop  com.github.linuxhubit.ppaextender.policy  com.github.linuxhubsubpixel.ppaextender.appdata.xml  meson.build
debian/: changelog  control  copyright  files  rules
po/: LINGUAS  POTFILES  com.github.linuxhubit.ppaextender.pot  com.github.linuxhubsubpixel.ppaextender.pot  de.po  es.po  fr.po  it.po  it.po~  nl.po
ppaextender/: constants.py  detail.py  headerbar.py  list.py  main.py  ppa.py  preferences.py  stack.py  style.css  welcome.py  window.py
src/: Application.vala  Constants.vala  MainWindow.vala  Sources.vala  meson.build
src/Core/: Sources.vala
src/Dialogs/: Add.vala  Edit.vala  Preferences.vala
src/Models/: Source.vala  SourceComponents.vala
src/Views/: Add.vala  ConfirmAdd.vala  List.vala  Preferences.vala
src/Widgets/: Headerbar.vala  Stack.vala  StackSwitcher.vala
