sources  = files(
    'Application.vala',
    'MainWindow.vala',
    'Constants.vala',

    'Views/Add.vala',
    'Views/List.vala',
    'Views/Preferences.vala',
    'Views/ConfirmAdd.vala',

    'Widgets/Headerbar.vala',
    'Widgets/StackSwitcher.vala',

    'Models/Source.vala',

    'Dialogs/Edit.vala',
    'Dialogs/Add.vala',
    'Dialogs/Preferences.vala',

    'Core/Sources.vala',
)
